--- a/assets/sass/global/_base.scss
+++ b/assets/sass/global/_base.scss
@@ -9,6 +9,9 @@
 @import "compass";
 @import "compass/layout";
 
+// Third-Party
+@import "susy";
+
 // #Variables and Mixins
 @import "variables";
 @import "mixins";
