--- a/assets/sass/modules/_content--home.scss
+++ b/assets/sass/modules/_content--home.scss
@@ -1,3 +1,10 @@
 /*----------------------------------------
   #HOME
 ----------------------------------------*/
+
+.content--home {
+	@extend %content;
+	@include bp(lg) {
+		@include span(last 10 of 12);
+	}
+}
