--- a/assets/sass/modules/_sidebar.scss
+++ b/assets/sass/modules/_sidebar.scss
@@ -4,7 +4,7 @@
 
 .sidebar {
 	@include bp(lg) {
-		@include span(3 of 12);
+		@include span(2 of 12);
 	}
 }
 
@@ -46,8 +46,10 @@ nav {
 
 nav ul {
 	@extend .small-text;
+	@extend .spaced;
 	font-family: $sans-serif;
 	a {
 		margin-bottom: 1.5em;
+		font-weight: $bold-font;
 	}
 }
