--- a/assets/sass/global/_states.scss
+++ b/assets/sass/global/_states.scss
@@ -1,3 +1,15 @@
 /*----------------------------------------
   #STATES
 ----------------------------------------*/
+
+.is-active {
+	color: $white;
+}
+
+.is-inactive {
+	color: $dark-grey !important;
+}
+
+.is-gold {
+	color: $sourdough;
+}
