--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -319,51 +319,142 @@ img {
     -webkit-transition: width 0.75s ease-in-out;
     transition: width 0.75s ease-in-out; }
 
-.service--learn, .service--capabilities, .service--capacities {
-  margin-bottom: 2em; }
-  .service--learn ul, .service--capabilities ul, .service--capacities ul {
-    font-family: "sofia-pro", "Helvetica Neue", "Helvetica", sans-serif;
-    letter-spacing: 1px;
-    text-transform: uppercase; }
-  .service--learn li, .service--learn p, .service--capabilities li, .service--capabilities p, .service--capacities li, .service--capacities p {
-    color: #A9A9A9;
-    font-size: 1.25rem;
-    list-style-type: none; }
-
-.service--learn {
-  border-left: #cfba95 2px solid;
-  padding-left: 2em; }
-  @media (min-width: 1024px) {
-    .service--learn {
-      width: 49.15254%;
-      float: left;
-      margin-right: 1.69492%; } }
-  .service--learn p {
-    margin: 0;
-    font-style: italic; }
-
-@media (min-width: 1024px) {
-  .service--capabilities {
-    width: 23.72881%;
-    float: left;
-    margin-right: 1.69492%; } }
-
-@media (min-width: 1024px) {
-  .service--capacities {
-    width: 23.72881%;
-    float: right;
-    margin-right: 0; } }
-
+.content--services .accordion {
+  width: 97%;
+  width: calc(100% - 20px); }
+.content--services .transition, .content--services p, .content--services ul li i:before, .content--services ul li i:after {
+  transition: all 0.25s ease-in-out; }
+.content--services .flipIn, .content--services ul li {
+  animation: flipdown 0.5s ease both; }
+.content--services .no-select, .content--services h3 {
+  -webkit-tap-highlight-color: transparent;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none; }
+.content--services h2 {
+  letter-spacing: 2px;
+  text-transform: uppercase;
+  margin-bottom: 1em; }
+.content--services h3 {
+  letter-spacing: 1px;
+  text-transform: normal;
+  font-size: 1.75em;
+  display: block;
+  margin: 0;
+  cursor: pointer; }
+.content--services p {
+  padding-left: 20px;
+  border-left: #cfba95 5px solid;
+  position: relative;
+  overflow: hidden;
+  max-height: 800px;
+  opacity: 1;
+  transform: translate(0, 0);
+  margin-top: 14px;
+  z-index: 2; }
+.content--services ul {
+  list-style: none;
+  perspective: 900;
+  padding: 0;
+  margin: 0; }
+.content--services ul li {
+  position: relative;
+  padding: 0;
+  margin: 0;
+  padding-bottom: 4px;
+  padding-top: 18px;
+  border-top: 1px solid #696969; }
+.content--services ul li:nth-of-type(1) {
+  animation-delay: 0.5s; }
+.content--services ul li:nth-of-type(2) {
+  animation-delay: 0.75s; }
+.content--services ul li:nth-of-type(3) {
+  animation-delay: 1s; }
+.content--services ul li:nth-of-type(4) {
+  animation-delay: 1.25s; }
+.content--services ul li:nth-of-type(5) {
+  animation-delay: 1.5s; }
+.content--services ul li:last-of-type {
+  padding-bottom: 0; }
+.content--services ul li i {
+  position: absolute;
+  transform: translate(-20px, -3px);
+  margin-top: 16px;
+  right: 0; }
+.content--services ul li i:before, .content--services ul li i:after {
+  content: "";
+  position: absolute;
+  background-color: #ffffff;
+  width: 3px;
+  height: 9px; }
+.content--services ul li i:before {
+  transform: translate(-2px, 0) rotate(45deg); }
+.content--services ul li i:after {
+  transform: translate(2px, 0) rotate(-45deg); }
+.content--services ul li input[type=checkbox], .content--services ul li .contact__form textarea[type=checkbox], .contact__form .content--services ul li textarea[type=checkbox] {
+  position: absolute;
+  cursor: pointer;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0; }
+.content--services ul li input[type=checkbox]:checked ~ p, .content--services ul li .contact__form textarea[type=checkbox]:checked ~ p, .contact__form .content--services ul li textarea[type=checkbox]:checked ~ p {
+  margin-top: 0;
+  max-height: 0;
+  opacity: 0;
+  transform: translate(0, 50%); }
+.content--services ul li input[type=checkbox]:checked ~ i:before, .content--services ul li .contact__form textarea[type=checkbox]:checked ~ i:before, .contact__form .content--services ul li textarea[type=checkbox]:checked ~ i:before {
+  transform: translate(2px, 0) rotate(45deg); }
+.content--services ul li input[type=checkbox]:checked ~ i:after, .content--services ul li .contact__form textarea[type=checkbox]:checked ~ i:after, .contact__form .content--services ul li textarea[type=checkbox]:checked ~ i:after {
+  transform: translate(-2px, 0) rotate(-45deg); }
+@keyframes flipdown {
+  0% {
+    opacity: 0;
+    transform-origin: top center;
+    transform: rotateX(-90deg); }
+  5% {
+    opacity: 1; }
+  80% {
+    transform: rotateX(8deg); }
+  83% {
+    transform: rotateX(6deg); }
+  92% {
+    transform: rotateX(-3deg); }
+  100% {
+    transform-origin: top center;
+    transform: rotateX(0deg); } }
 #about {
   background-image: url("../img/home-bg.jpg"); }
+
+@media (min-width: 1024px) {
+  .content--about img {
+    display: inline-block;
+    margin-bottom: 0; } }
+
+.content--about p + img {
+  margin-top: 1em; }
+
+.content--about p + img + span {
+  margin-top: 1em; }
+
+.content--about img + span {
+  display: none; }
+  @media (min-width: 1024px) {
+    .content--about img + span {
+      width: 120px;
+      display: inline-block;
+      vertical-align: top; } }
 
 .content--about h1, .content--about p {
   word-wrap: break-word;
   max-width: 95%;
   max-width: calc(100% - 20px); }
-.content--about p {
-  max-width: 600px;
-  padding-right: 1em; }
+.content--about p, .content--about img {
+  max-width: 768px;
+  padding-right: 20px; }
 
 .content--contact h1, .content--contact p {
   word-wrap: break-word;
@@ -372,6 +463,8 @@ img {
 
 .contact__form {
   max-width: 646px; }
+  .contact__form form {
+    margin-top: 4em; }
   .contact__form input, .contact__form textarea {
     font-family: "sofia-pro", "Helvetica Neue", "Helvetica", sans-serif;
     font-size: 1.5rem;
