--- a/assets/sass/modules/_layout.scss
+++ b/assets/sass/modules/_layout.scss
@@ -129,41 +129,150 @@ img {
 	}
 }
 
-// Services
-.service--learn, .service--capabilities, .service--capacities {
+// Resources
+
+.content--services {
+	.accordion {
+		width: 97%;
+		width: calc(100% - 20px);
+	}
+	.transition, p, ul li i:before, ul li i:after {
+	  transition: all 0.25s ease-in-out;
+	}
+
+	.flipIn, ul li {
+	  animation: flipdown 0.5s ease both;
+	}
+
+	.no-select, h3 {
+	  -webkit-tap-highlight-color: transparent;
+	  -webkit-touch-callout: none;
+	  -webkit-user-select: none;
+	  -khtml-user-select: none;
+	  -moz-user-select: none;
+	  -ms-user-select: none;
+	  user-select: none;
+	}
+
+	h2 {
+		@include text-transform(2px,uppercase);
+		margin-bottom: 1em;
+	}
+
+	h3 {
+	  @include text-transform(1px,normal);
+	  font-size: 1.75em;
+	  display: block;
+	  margin: 0;
+	  cursor: pointer;
+	}
+
+	p {
+	  padding-left: 20px;
+	  border-left: $sourdough 5px solid;
+	  position: relative;
+	  overflow: hidden;
+	  max-height: 800px;
+	  opacity: 1;
+	  transform: translate(0, 0);
+	  margin-top: 14px;
+	  z-index: 2;
+	}
+
 	ul {
-		font-family: $sans-serif;
-		@include text-transform(1px,uppercase);
+	  list-style: none;
+	  perspective: 900;
+	  padding: 0;
+	  margin: 0;
 	}
-	li, p {
-		color: $med-grey;
-		font-size: 1.25rem;
-		list-style-type: none;
+	ul li {
+	  position: relative;
+	  padding: 0;
+	  margin: 0;
+	  padding-bottom: 4px;
+	  padding-top: 18px;
+	  border-top: 1px solid $dark-grey;
 	}
-	margin-bottom: 2em;
-}
+	ul li:nth-of-type(1) {
+	  animation-delay: 0.5s;
+	}
+	ul li:nth-of-type(2) {
+	  animation-delay: 0.75s;
+	}
+	ul li:nth-of-type(3) {
+	  animation-delay: 1s;
+	}
+	ul li:nth-of-type(4) {
+	  animation-delay: 1.25s;
+	}
+	ul li:nth-of-type(5) {
+	  animation-delay: 1.5s;
+	}
+	ul li:last-of-type {
+	  padding-bottom: 0;
+	}
+	ul li i {
+	  position: absolute;
+	  transform: translate(-20px, -3px);
+	  margin-top: 16px;
+	  right: 0;
+	}
+	ul li i:before, ul li i:after {
+	  content: "";
+	  position: absolute;
+	  background-color: $white;
+	  width: 3px;
+	  height: 9px;
+	}
+	ul li i:before {
+	  transform: translate(-2px, 0) rotate(45deg);
+	}
+	ul li i:after {
+	  transform: translate(2px, 0) rotate(-45deg);
+	}
+	ul li input[type=checkbox] {
+	  position: absolute;
+	  cursor: pointer;
+	  width: 100%;
+	  height: 100%;
+	  z-index: 1;
+	  opacity: 0;
+	}
+	ul li input[type=checkbox]:checked ~ p {
+	  margin-top: 0;
+	  max-height: 0;
+	  opacity: 0;
+	  transform: translate(0, 50%);
+	}
+	ul li input[type=checkbox]:checked ~ i:before {
+	  transform: translate(2px, 0) rotate(45deg);
+	}
+	ul li input[type=checkbox]:checked ~ i:after {
+	  transform: translate(-2px, 0) rotate(-45deg);
+	}
 
-.service--learn {
-	border-left: $sourdough 2px solid;
-	padding-left: 2em;
-	@include bp(lg) {
-		@include span(first 6 of 12);
-	}
-	p { 
-		margin: 0;
-		font-style: italic;
-	}
-}
-
-.service--capabilities {
-	@include bp(lg) {
-		@include span(3 of 12);
-	}
-}
-
-.service--capacities {
-	@include bp(lg) {
-		@include span(last 3 of 12);
+	@keyframes flipdown {
+	  0% {
+	    opacity: 0;
+	    transform-origin: top center;
+	    transform: rotateX(-90deg);
+	  }
+	  5% {
+	    opacity: 1;
+	  }
+	  80% {
+	    transform: rotateX(8deg);
+	  }
+	  83% {
+	    transform: rotateX(6deg);
+	  }
+	  92% {
+	    transform: rotateX(-3deg);
+	  }
+	  100% {
+	    transform-origin: top center;
+	    transform: rotateX(0deg);
+	  }
 	}
 }
 
@@ -177,6 +286,27 @@ img {
 }
 .content--about img {
 	@extend %responsive-w-border;
+	@include bp(lg) {
+		display: inline-block;
+		margin-bottom: 0;
+	}
+}
+
+.content--about p + img {
+	margin-top: 1em;
+}
+
+.content--about p + img + span {
+	margin-top: 1em;
+}
+
+.content--about img + span {
+	display: none;
+	@include bp(lg) {
+		width: 120px;
+		display: inline-block;
+		vertical-align: top;
+	}
 }
 
 .content--about {
@@ -188,9 +318,9 @@ img {
 	h1 {
 		@extend %visuallyhidden;
 	}
-	p { 
-		max-width: 600px; 
-		padding-right: 1em;
+	p, img { 
+		max-width: 768px; 
+		padding-right: 20px;
 	}
 }
 
@@ -205,6 +335,7 @@ img {
 
 .contact__form {
 	max-width: 646px;
+	form { margin-top: 4em; }
 	input {
 		font-family: $sans-serif;
 		font-size: 1.5rem;
