--- a/assets/sass/modules/_sidebar.scss
+++ b/assets/sass/modules/_sidebar.scss
@@ -22,21 +22,13 @@ header {
     display: block;
 	height: 80px;
     width: 80px;
+    border-bottom: none;
+    padding-bottom: 0;
 	@include img-2x('logo.png','logo-2x.png');
 }
 
 .header__name {
 	@extend %visuallyhidden;
-}
-
-.header__description {
-	@extend .small-text;
-	@include text-transform(2px,uppercase);
-	max-width: 20em;
-	font-family: $sans-serif;
-	width: 95%;
-    display: block;
-    margin: 2em 0;
 }
 
 // Navigation
@@ -51,10 +43,13 @@ nav ul {
 	font-family: $sans-serif;
 	color: $light-grey;
 	a {
+	    padding-bottom: 0;
+		border-bottom: none;
 		margin-bottom: 1.5em;
+		color: $med-grey;
 		&:hover {
+			border-bottom: none;
 			color: $white;
-			@include single-transition(color,0.15s,ease-in-out);
 		}
 	}
 }
