--- a/assets/sass/modules/_typography.scss
+++ b/assets/sass/modules/_typography.scss
@@ -115,7 +115,14 @@ p {
 
 a {
 	text-decoration: none;
-	color: $med-grey;
+	color: $sourdough;
+	padding-bottom: 2px;
+	border-bottom: 1px solid $sourdough;
+	&:hover, &:focus {
+		color: lighten($sourdough,10%);
+		border-bottom: 1px solid lighten($sourdough,10%);
+		@include single-transition(all,0.1.5s,ease-in-out)
+	}
 }
 
 .small-text {
